try both clippy checks

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -13,8 +13,14 @@ jobs:
       - run: rustup component add clippy 
       - uses: actions-rs/clippy-check@v1
         with:
+          name: pedantic-check
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: -- -D warnings -W clippy::pedantic
+          args: -- -W clippy::pedantic
+      - uses: actions-rs/clippy-check@v1
+        with:
+          name: regular-check
+          token: ${{ secrets.GITHUB_TOKEN }}
+          args: -- -D warnings
       - name: Format project
         run: cargo fmt --check 
       - name: Test project, excluding time-sensitive tests
