--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Format project
         run: cargo fmt --check 
       - name: Test project, excluding time-sensitive tests
-        run: cargo test -- --skip time_sensitive validate_valid_attestation_doc_in_cert
+        run: cargo test -- --skip time_sensitive --skip validate_valid_attestation_doc_in_cert
       - name: Install libfaketime for use in time-sensitive tests
         run: sudo apt-get install -y libfaketime
       - name: Run time-sensitive tests at older date
