--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Format project
         run: cargo fmt --check 
       - name: Test project, excluding time-sensitive tests
-        run: cargo test -- --skip time_sensitive
+        run: cargo test -- --skip time_sensitive --skip validate_valid_attestation_doc_in_cert
       - name: Install libfaketime for use in time-sensitive tests
         run: sudo apt-get install -y libfaketime
       - name: Run time-sensitive tests at older date
@@ -32,4 +32,9 @@ jobs:
           LD_PRELOAD: /usr/lib/x86_64-linux-gnu/faketime/libfaketime.so.1
           FAKETIME: '2022-10-13 10:00:00'
         run: cargo test time_sensitive
+      - name: Run cert tests at correct date
+        env:
+          LD_PRELOAD: /usr/lib/x86_64-linux-gnu/faketime/libfaketime.so.1
+          FAKETIME: '2022-11-16 10:55:00'
+        run: cargo test validate_valid_attestation_doc_in_cert
         
