--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -13,6 +13,8 @@ thiserror = "1.0"
 serde_cbor = "0.11"
 hex = "0.4.3"
 serde_bytes = "0.11"
+webpki = "0.22"
+x509-parser = "0.14.0"
 
 [dev-dependencies]
 rcgen = "0.10"
