--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
-  "attestation-doc-validation"
+  "attestation-doc-validation",
+  "node-attestation-bindings"
 ]
 
 [profile.release]
