--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -1,8 +1,8 @@
 on:
   push:
     paths:
-      - attestation-doc-validation/src/**
-      - attestation-doc-validation/test-files/**
+      - attestation-doc-validation/**
+      - node-attestation-bindings/**
       - .github/workflows/lint-and-test.yml
 name: Lint and Test
 jobs:
@@ -10,25 +10,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: rustup component add clippy
-      - uses: actions-rs/clippy-check@v1
-        with:
-          name: pedantic-check
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: -- -W clippy::pedantic
-      - uses: actions-rs/clippy-check@v1
-        with:
-          name: regular-check
-          token: ${{ secrets.GITHUB_TOKEN }}
-          args: -- -D warnings
-      - name: Format project
-        run: cargo fmt --check
-      - name: Test project, excluding time-sensitive tests
-        run: cargo test -- --skip time_sensitive
-      - name: Install libfaketime for use in time-sensitive tests
-        run: sudo apt-get install -y libfaketime
-      - name: Run tests using real certs at older date
-        env:
-          LD_PRELOAD: /usr/lib/x86_64-linux-gnu/faketime/libfaketime.so.1
-          FAKETIME: "2023-01-18 15:15:00"
-        run: cargo test time_sensitive
+      - run: cargo install cargo-make
+      - run: cargo make ci
