--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -12,6 +12,7 @@ openssl = "0.10.41"
 thiserror = "1.0"
 serde_cbor = "0.11"
 hex = "0.4.3"
+base64 = "0.21"
 serde_bytes = "0.11"
 
 [dev-dependencies]
