chore: temp remove windows compilation from python action until we support non-unix

--- a/.github/workflows/build-and-deploy-python-bindings.yml
+++ b/.github/workflows/build-and-deploy-python-bindings.yml
@@ -24,23 +24,24 @@ jobs:
           name: wheels
           path: dist
 
-  windows:
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v3
-      # Install Openssl
-      - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
-      - run: vcpkg install openssl:x64-windows-static-md
-      - uses: PyO3/maturin-action@v1
-        with:
-          command: build
-          args: --release -o dist --find-interpreter
-          working-directory: python-attestation-bindings
-      - name: Upload wheels
-        uses: actions/upload-artifact@v3
-        with:
-          name: wheels
-          path: dist
+  # Attestation doc validation crate can't compile on non-unix systems due to a dependency on the AWS NSM crates
+  # windows:
+  #   runs-on: windows-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     # Install Openssl
+  #     - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+  #     - run: vcpkg install openssl:x64-windows-static-md
+  #     - uses: PyO3/maturin-action@v1
+  #       with:
+  #         command: build
+  #         args: --release -o dist --find-interpreter
+  #         working-directory: python-attestation-bindings
+  #     - name: Upload wheels
+  #       uses: actions/upload-artifact@v3
+  #       with:
+  #         name: wheels
+  #         path: dist
 
   macos:
     runs-on: macos-latest
@@ -61,7 +62,8 @@ jobs:
     name: Release
     runs-on: ubuntu-latest
     if: "startsWith(github.ref, 'refs/tags/')"
-    needs: [macos, windows, linux]
+    # needs: [macos, windows, linux]
+    needs: [macos, linux]
     steps:
       - uses: actions/download-artifact@v3
         with:
