--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-nitro-enclaves-cose = "0.5.0"
+aws-nitro-enclaves-cose = { version = "0.5.0", default-features = false }
 aws-nitro-enclaves-nsm-api = "0.2.1"
 openssl = "0.10.41"
 thiserror = "1.0"
@@ -14,6 +14,11 @@ serde_cbor = "0.11"
 hex = "0.4.3"
 base64 = "0.21"
 serde_bytes = "0.11"
+serde = { version = "1.0", features = ["derive"] }
+serde_with = "2.2"
+webpki = "0.22"
+x509-parser = "0.14.0"
+ring = { version = "0.16.20", features = ["std"] }
 
 [dev-dependencies]
 rcgen = "0.10"
