--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-nitro-enclaves-cose = { version = "0.5.0", default-features = false }
+aws-nitro-enclaves-cose = { version = "0.5.0" } #, default-features = false }
 aws-nitro-enclaves-nsm-api = "0.2.1"
 openssl = "0.10.41"
 thiserror = "1.0"
@@ -19,6 +19,8 @@ serde_with = "2.2"
 webpki = "0.22"
 x509-parser = "0.14.0"
 ring = { version = "0.16.20", features = ["std"] }
+der = { version = "0.6", features = ["alloc","derive","oid"] }
+p256 = { version = "0.12.0", features = ["ecdsa"] }
 
 [dev-dependencies]
 rcgen = "0.10"
