update attestation doc validation crate to point its docs to docs.rs

--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "Apache-2.0"
 description = "A Rust library for attesting enclaves according to the Evervault Attestation scheme. This crate is used to generate ffi bindings."
 homepage = "https://github.com/evervault/attestation-doc-validation"
-documentation = "https://github.com/evervault/attestation-doc-validation"
+documentation = "https://docs.rs/attestation-doc-validation"
 repository = "https://github.com/evervault/attestation-doc-validation"
 readme = "README.md"
 keywords = ["aws", "nitro-enclaves", "enclaves", "attestation", "evervault"]
