--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -26,3 +26,5 @@ serde_bytes = "0.11"
 [dev-dependencies]
 rcgen = "0.10"
 base64 = "0.21"
+serde_json = "1"
+serde = { version = "1.0.152", features = ["derive"] }
