--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -21,6 +21,6 @@ jobs:
           components: rustfmt, clippy
       - uses: davidB/rust-cargo-make@10579dcff82285736fad5291533b52d3c93d6b3b
       - name: Run CI Tasks with backtrace
-        run: cargo make ci -p ${{ matrix.package }}
+        run: cd ${{ matrix.package }} ; cargo make ci
         env:
           RUST_BACKTRACE: full
