--- a/node-attestation-bindings/Makefile.toml
+++ b/node-attestation-bindings/Makefile.toml
@@ -11,6 +11,10 @@ install_crate = "rustfmt"
 command = "cargo"
 args = ["fmt", "--check"]
 
+[tasks.test]
+command = "yarn"
+args = ["test"]
+
 [tasks.build_lib]
 command = "cargo"
 args = ["build", "--release"]
@@ -27,4 +31,4 @@ args = ["run", "build"]
 dependencies = ["build_lib","build_bindings"]
 
 [tasks.ci]
-dependencies = ["lint","format","build"]
+dependencies = ["lint","format","test","build"]
