--- a/node-attestation-bindings/Makefile.toml
+++ b/node-attestation-bindings/Makefile.toml
@@ -11,20 +11,17 @@ install_crate = "rustfmt"
 command = "cargo"
 args = ["fmt", "--check"]
 
-[tasks.build_lib]
+[tasks.clean]
 command = "cargo"
-args = ["build", "--release"]
+args = "clean"
 
 [tasks.install_deps]
 command = "yarn"
 
-[tasks.build_bindings]
-dependencies = ["install_deps"]
+[tasks.build]
+dependencies = ["clean","install_deps"]
 command = "yarn"
 args = ["run", "build"]
-
-[tasks.build]
-dependencies = ["build_lib","build_bindings"]
 
 [tasks.debug]
 script = '''
