update build in docker step to use node bindings subdirectory

--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -4,6 +4,8 @@ on:
       - attestation-doc-validation/**
       - node-attestation-bindings/**
       - .github/workflows/lint-and-test.yml
+      - test-data/**
+      - test-specs/**
 name: Lint and Test
 jobs:
   lint_and_test:
