--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -15,13 +15,14 @@ categories = ["cryptography", "development-tools::ffi", "development-tools"]
 
 [dependencies]
 aws-nitro-enclaves-cose = "0.5.0"
-aws-nitro-enclaves-nsm-api = "0.2.1"
 openssl = "0.10.41"
 thiserror = "1.0"
 serde_cbor = "0.11"
 hex = "0.4.3"
 base64 = "0.21"
 serde_bytes = "0.11"
+serde = { version = "1.0", features = ["derive"] }
+serde_with = "2.2"
 
 [dev-dependencies]
 rcgen = "0.10"
