update crate to use rust crypto in place of openssl and ring for sig verification

--- a/attestation-doc-validation/Makefile.toml
+++ b/attestation-doc-validation/Makefile.toml
@@ -39,3 +39,4 @@ args = ["build"]
 
 [tasks.ci]
 dependencies = ["lint","format","check","test_ci","build"]
+#/usr/lib/aarch64-linux-gnu/faketime/libfaketime
