--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["cryptography", "development-tools::ffi", "development-tools"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-nitro-enclaves-cose = "0.5.0"
+aws-nitro-enclaves-cose = { version = "0.5.0" }
 openssl = "0.10.41"
 thiserror = "1.0"
 serde_cbor = "0.11"
@@ -28,7 +28,8 @@ x509-parser = "0.14.0"
 ring = { version = "0.16.20", features = ["std"] }
 der = { version = "0.6", features = ["alloc","derive","oid"] }
 p256 = { version = "0.12.0", features = ["ecdsa"] }
-p384 = { version = "0.12.0", features = ["ecdsa"] }
+p384 = { version = "0.12.0", features = ["ecdsa","arithmetic"] }
+sha2 = "0.10.6"
 
 [dev-dependencies]
 rcgen = "0.10"
