--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -14,7 +14,7 @@ categories = ["cryptography", "development-tools::ffi", "development-tools"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aws-nitro-enclaves-cose = { version = "0.5.0" }
+aws-nitro-enclaves-cose = { version = "0.5.0", default-features = false }
 openssl = "0.10.41"
 thiserror = "1.0"
 serde_cbor = "0.11"
@@ -25,12 +25,14 @@ serde = { version = "1.0", features = ["derive"] }
 serde_with = "2.2"
 webpki = "0.22"
 x509-parser = "0.14.0"
-ring = { version = "0.16.20", features = ["std"] }
 der = { version = "0.6", features = ["alloc","derive","oid"] }
 p256 = { version = "0.12.0", features = ["ecdsa"] }
 p384 = { version = "0.12.0", features = ["ecdsa","arithmetic"] }
 ecdsa = { version = "0.15.0", features = ["verifying"] }
 sha2 = "0.10.6"
+aes = "0.8.2"
+aes-gcm = "0.10.1"
+rand = { version = "0.8.5", features = ["getrandom"] }
 
 [dev-dependencies]
 rcgen = "0.10"
