--- a/attestation-doc-validation/Cargo.toml
+++ b/attestation-doc-validation/Cargo.toml
@@ -15,7 +15,6 @@ categories = ["cryptography", "development-tools::ffi", "development-tools"]
 
 [dependencies]
 aws-nitro-enclaves-cose = { version = "0.5.0", default-features = false }
-openssl = "0.10.41"
 thiserror = "1.0"
 serde_cbor = "0.11"
 hex = "0.4.3"
@@ -23,7 +22,7 @@ base64 = "0.21"
 serde_bytes = "0.11"
 serde = { version = "1.0", features = ["derive"] }
 serde_with = "2.2"
-webpki = "0.22"
+webpki = { version = "0.22", features = ["alloc"] }
 x509-parser = "0.14.0"
 der = { version = "0.6", features = ["alloc","derive","oid"] }
 p256 = { version = "0.12.0", features = ["ecdsa"] }
@@ -39,3 +38,4 @@ rcgen = "0.10"
 base64 = "0.21"
 serde_json = "1"
 serde = { version = "1.0.152", features = ["derive"] }
+pem = "1.1.1"
