debugging open bsd builds

--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -199,9 +199,12 @@ jobs:
             whoami
             env
             freebsd-version
-            cd ${{ env.SUBDIRECTORY }}
+            cd node-attestation-bindings
+            ls 
             yarn install
             yarn build
+            ls
+            cwd
             strip -x *.node
             yarn test
             rm -rf node_modules
