--- a/.github/workflows/build-and-deploy-node-bindings.yml
+++ b/.github/workflows/build-and-deploy-node-bindings.yml
@@ -92,7 +92,7 @@ jobs:
     runs-on: ${{ matrix.settings.host }}
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -233,7 +233,7 @@ jobs:
     runs-on: ${{ matrix.settings.host }}
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -269,7 +269,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -305,7 +305,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -343,7 +343,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     steps:
       - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - uses: actions/checkout@v3
@@ -376,7 +376,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     steps:
       - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - uses: actions/checkout@v3
@@ -416,7 +416,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     steps:
       - run: docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - uses: actions/checkout@v3
@@ -448,7 +448,7 @@ jobs:
     runs-on: macos-latest
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     steps:
       - uses: actions/checkout@v3
       - name: Setup node
@@ -483,7 +483,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./${{ env.SUBDIRECTORY }}
+        working-directory: ${{ env.SUBDIRECTORY }}
     if: ${{ startsWith(github.ref,'refs/tags/node/v') }}
     needs:
       # - build-freebsd
